--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,11 @@ jobs:
         ports:
           - 32574:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-      steps:
-        - name: Verify MySQL connection from host
-          run: |
-            sudo apt-get install -y mysql-client
-            mysql --host 127.0.0.1 --port 32574 -uroot -ppassword -e "SHOW DATABASES"
+#      steps:
+#        - name: Verify MySQL connection from host
+#          run: |
+#            sudo apt-get install -y mysql-client
+#            mysql --host 127.0.0.1 --port 32574 -uroot -ppassword -e "SHOW DATABASES"
     container: ubuntu
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
